[gd_scene load_steps=22 format=3 uid="uid://djv4pw4i1kb27"]

[ext_resource type="Script" path="res://Scenes/level_1.gd" id="1_c0gpq"]
[ext_resource type="ArrayMesh" uid="uid://bsvupsat48j6e" path="res://Models/cliff.obj" id="2_7cmg1"]
[ext_resource type="Material" uid="uid://ddg6ihg458va" path="res://Textures/ground/ground_material.tres" id="2_kwfbw"]
[ext_resource type="PackedScene" uid="uid://bdabh11ntrni6" path="res://Objects/Player/player.tscn" id="3_7r0my"]
[ext_resource type="PackedScene" uid="uid://cyqrhyrol0vk4" path="res://Scenes/Main Menu/pause_menu.tscn" id="6_sdpw6"]
[ext_resource type="PackedScene" uid="uid://cipam2iepqiqw" path="res://Models/tree_mesh.tscn" id="7_fwyl6"]
[ext_resource type="PackedScene" uid="uid://cb3vasg4jklcp" path="res://Objects/Player/inventory_menu.tscn" id="7_pnls8"]
[ext_resource type="PackedScene" uid="uid://d0vy3r5br3kbn" path="res://Objects/Player/change_hotbar.tscn" id="8_fwh3s"]
[ext_resource type="PackedScene" uid="uid://dkhyop43ubhlm" path="res://Models/castle_tower.tscn" id="9_rv86v"]
[ext_resource type="PackedScene" uid="uid://dj484hdc51650" path="res://Models/castle_wall.tscn" id="10_nhppt"]
[ext_resource type="PackedScene" uid="uid://cn4fkem2o5uis" path="res://Models/bridge.tscn" id="11_shiy2"]
[ext_resource type="PackedScene" uid="uid://dsia3w8sa2y81" path="res://Objects/campfire.tscn" id="12_iitm7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_eu8d0"]
sky_top_color = Color(0.618485, 0.384415, 0.210642, 1)
sky_horizon_color = Color(0.850328, 0.776879, 0.716348, 1)
ground_bottom_color = Color(0.782826, 0.723101, 0.654749, 1)
ground_horizon_color = Color(0.850328, 0.776879, 0.716348, 1)

[sub_resource type="Sky" id="Sky_mo3mb"]
sky_material = SubResource("ProceduralSkyMaterial_eu8d0")

[sub_resource type="Environment" id="Environment_dukk0"]
background_mode = 2
sky = SubResource("Sky_mo3mb")
tonemap_mode = 2
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.394053, 0.34945, 0.32218, 1)
volumetric_fog_ambient_inject = 1.08
volumetric_fog_sky_affect = 0.105

[sub_resource type="PlaceholderTexture3D" id="PlaceholderTexture3D_aidwi"]

[sub_resource type="FogMaterial" id="FogMaterial_st2o4"]
albedo = Color(0.481235, 0, 0.0823463, 1)
emission = Color(0.543192, 0.0828201, 0.0935673, 1)
density_texture = SubResource("PlaceholderTexture3D_aidwi")

[sub_resource type="NavigationMesh" id="NavigationMesh_ml2qp"]
geometry_parsed_geometry_type = 2
cell_size = 0.01
cell_height = 0.01
agent_height = 0.0
agent_radius = 0.0
agent_max_climb = 500.0
agent_max_slope = 90.0

[sub_resource type="BoxShape3D" id="BoxShape3D_2ebft"]
size = Vector3(2.00101, 0.0413818, 2.00024)

[sub_resource type="PlaneMesh" id="PlaneMesh_k2uxn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a3mve"]
size = Vector3(237.16, 1, 192.294)

[node name="Level1" type="Node3D"]
script = ExtResource("1_c0gpq")

[node name="PlayerSpawnPOS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 602.788, 2.58321, 91.4802)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.885394, -0.0902883, 0.455989, 0, 0.980955, 0.194234, -0.464842, 0.171974, -0.868531, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dukk0")

[node name="FogVolume" type="FogVolume" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 190.255, -11.8825, 5.35036)
size = Vector3(370.462, 10.4682, 271.837)
material = SubResource("FogMaterial_st2o4")

[node name="World" type="Node3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="World"]
navigation_mesh = SubResource("NavigationMesh_ml2qp")

[node name="StaticBody3D" type="StaticBody3D" parent="World/NavigationRegion3D"]
transform = Transform3D(3.16345, 0, 0, 0, 1, 0, 0, 0, 7.73769, 28.9883, -0.111777, -1.58956)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/NavigationRegion3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000492334, -0.0168686, 0.00035181)
shape = SubResource("BoxShape3D_2ebft")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/NavigationRegion3D/StaticBody3D"]
mesh = SubResource("PlaneMesh_k2uxn")
surface_material_override/0 = ExtResource("2_kwfbw")

[node name="Player" parent="." instance=ExtResource("3_7r0my")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 602.853, 2.37438, 91.1965)

[node name="InstaKillArea" type="Area3D" parent="." groups=["InstaDeath"]]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 163.685, -11.4871, 5.31499)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InstaKillArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.8798, 7.42805, -9.53399)
shape = SubResource("BoxShape3D_a3mve")

[node name="MenuFadeTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.01
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("6_sdpw6")]
z_index = 2

[node name="ScrollContainer" parent="." instance=ExtResource("7_pnls8")]
offset_left = 3.0002
offset_top = -4.99984
offset_right = 3.00018
offset_bottom = -4.99976

[node name="ChangeHotbar" parent="." instance=ExtResource("8_fwh3s")]

[node name="Cliff" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.18557e-05, 0, 1000, 0, 100, 0, -500, 0, -4.37114e-05, -22.8345, -71.8912, -14.1247)
material_override = ExtResource("2_kwfbw")
mesh = ExtResource("2_7cmg1")

[node name="Cliff2" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.18557e-05, 0, -1000, 0, 100, 0, 500, 0, -4.37114e-05, -22.8345, -71.8912, -14.1247)
material_override = ExtResource("2_kwfbw")
mesh = ExtResource("2_7cmg1")

[node name="Cliff3" type="MeshInstance3D" parent="."]
transform = Transform3D(482.654, 0, 261.111, 0, 100, 0, -130.556, 0, 965.309, 473.649, -71.8912, -14.1247)
material_override = ExtResource("2_kwfbw")
mesh = ExtResource("2_7cmg1")

[node name="Cliff4" type="MeshInstance3D" parent="."]
transform = Transform3D(-463.664, 0, -374.251, 0, 100, 0, 187.125, 0, -927.328, -736.182, -71.8912, -14.1247)
mesh = ExtResource("2_7cmg1")

[node name="Tree" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 522.092, -2.81668, 108.64)

[node name="Tree2" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.730055, 0, 0.683388, 0, 1, 0, -0.683388, 0, 0.730055, 539.712, -2.1591, 95.8011)

[node name="Tree3" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.236889, 0, 0.971537, 0, 1, 0, -0.971537, 0, 0.236889, 530.653, -2.1591, 102.28)

[node name="Tree4" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.332902, 0, -0.942962, 0, 1, 0, 0.942962, 0, 0.332902, 530.095, -2.81668, 111.805)

[node name="Tree5" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 547.714, -2.1591, 98.9657)

[node name="Tree6" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 538.656, -2.1591, 105.444)

[node name="Tree7" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 546.58, -2.81668, 108.64)

[node name="Tree8" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.730055, 0, 0.683388, 0, 1, 0, -0.683388, 0, 0.730055, 564.199, -2.1591, 95.8011)

[node name="Tree9" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.236889, 0, 0.971537, 0, 1, 0, -0.971537, 0, 0.236889, 555.141, -2.1591, 102.28)

[node name="Tree10" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.332902, 0, -0.942962, 0, 1, 0, 0.942962, 0, 0.332902, 554.583, -2.81668, 111.805)

[node name="Tree11" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 572.202, -2.1591, 98.9657)

[node name="Tree12" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 563.144, -2.1591, 105.444)

[node name="Tree13" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 571.474, -2.81668, 108.64)

[node name="Tree14" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.730055, 0, 0.683388, 0, 1, 0, -0.683388, 0, 0.730055, 589.093, -2.1591, 95.8011)

[node name="Tree15" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.236889, 0, 0.971537, 0, 1, 0, -0.971537, 0, 0.236889, 580.035, -2.1591, 102.28)

[node name="Tree16" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.332902, 0, -0.942962, 0, 1, 0, 0.942962, 0, 0.332902, 579.477, -2.81668, 111.805)

[node name="Tree17" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 597.096, -2.1591, 98.9657)

[node name="Tree18" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 588.038, -2.1591, 105.444)

[node name="Tree19" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 595.962, -2.81668, 108.64)

[node name="Tree20" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.730055, 0, 0.683388, 0, 1, 0, -0.683388, 0, 0.730055, 613.581, -2.1591, 95.8011)

[node name="Tree21" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.236889, 0, 0.971537, 0, 1, 0, -0.971537, 0, 0.236889, 604.523, -2.1591, 102.28)

[node name="Tree22" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.332902, 0, -0.942962, 0, 1, 0, 0.942962, 0, 0.332902, 603.965, -2.81668, 111.805)

[node name="Tree23" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 621.584, -2.1591, 98.9657)

[node name="Tree24" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 612.526, -2.1591, 105.444)

[node name="Tree25" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 592.806, -2.81668, 5.62745)

[node name="Tree26" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.841916, 0, -0.539609, 0, 1, 0, 0.539609, 0, 0.841916, 609.584, -2.1591, 19.5488)

[node name="Tree27" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.999957, 0, 0.00926755, 0, 1, 0, -0.00926755, 0, 0.999957, 601.077, -2.1591, 12.3615)

[node name="Tree28" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(-0.832157, 0, -0.55454, 0, 1, 0, 0.55454, 0, -0.832157, 591.707, -2.81668, 14.1628)

[node name="Tree29" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 608.484, -2.1591, 28.0841)

[node name="Tree30" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 599.977, -2.1591, 20.8968)

[node name="Tree31" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 598.827, -2.81668, 29.3633)

[node name="Tree32" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.841916, 0, -0.539609, 0, 1, 0, 0.539609, 0, 0.841916, 615.605, -2.1591, 43.2846)

[node name="Tree33" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.999957, 0, 0.00926755, 0, 1, 0, -0.00926755, 0, 0.999957, 607.098, -2.1591, 36.0973)

[node name="Tree34" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(-0.832157, 0, -0.55454, 0, 1, 0, 0.55454, 0, -0.832157, 597.728, -2.81668, 37.8986)

[node name="Tree35" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 614.505, -2.1591, 51.8199)

[node name="Tree36" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 605.998, -2.1591, 44.6326)

[node name="Tree37" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 604.948, -2.81668, 53.4932)

[node name="Tree38" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.841916, 0, -0.539609, 0, 1, 0, 0.539609, 0, 0.841916, 621.726, -2.1591, 67.4145)

[node name="Tree39" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.999957, 0, 0.00926755, 0, 1, 0, -0.00926755, 0, 0.999957, 613.219, -2.1591, 60.2272)

[node name="Tree40" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(-0.832157, 0, -0.55454, 0, 1, 0, 0.55454, 0, -0.832157, 603.849, -2.81668, 62.0285)

[node name="Tree41" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 620.626, -2.1591, 75.9498)

[node name="Tree42" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 612.119, -2.1591, 68.7625)

[node name="Tree43" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 610.97, -2.81668, 77.229)

[node name="Tree44" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.841916, 0, -0.539609, 0, 1, 0, 0.539609, 0, 0.841916, 627.747, -2.1591, 91.1503)

[node name="Tree45" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.999957, 0, 0.00926755, 0, 1, 0, -0.00926755, 0, 0.999957, 619.24, -2.1591, 83.963)

[node name="Tree46" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(-0.832157, 0, -0.55454, 0, 1, 0, 0.55454, 0, -0.832157, 609.87, -2.81668, 85.7643)

[node name="Tree47" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 626.647, -2.1591, 99.6856)

[node name="Tree48" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(0.245883, 0, -0.9693, 0, 1, 0, 0.9693, 0, 0.245883, 618.14, -2.1591, 92.4983)

[node name="Tree49" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 620.241, -2.1591, 105.89)

[node name="CastleTower" parent="." instance=ExtResource("9_rv86v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 610.238, -2.1591, -2.62148)

[node name="CastleWall" parent="." instance=ExtResource("10_nhppt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 589.391, -2.1591, -3.11106)

[node name="CastleTower2" parent="." instance=ExtResource("9_rv86v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 567.086, -2.1591, -3.22896)

[node name="CastleWall2" parent="." instance=ExtResource("10_nhppt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 547.251, -2.1591, -3.85228)

[node name="CastleTower3" parent="." instance=ExtResource("9_rv86v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 525.18, -2.1591, -3.40664)

[node name="CastleWall3" parent="." instance=ExtResource("10_nhppt")]
transform = Transform3D(0.131201, 0, -0.991356, 0, 1, 0, 0.991356, 0, 0.131201, 520.365, -2.1591, -22.2006)

[node name="Tree50" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 519.299, -2.1591, -0.372705)

[node name="Tree51" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 536.617, -2.1591, 9.78627)

[node name="Tree52" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 566.834, -2.1591, 21.7404)

[node name="Tree53" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 556.939, -2.1591, 50.7772)

[node name="Tree54" parent="." instance=ExtResource("7_fwyl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 537.368, -2.1591, 68.0035)

[node name="CastleTower4" parent="." instance=ExtResource("9_rv86v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 518.024, -2.15909, -44.8246)

[node name="Cliff5" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 100, 0, 0, 0, 200, 508.618, -102.527, -12.4075)
material_override = ExtResource("2_kwfbw")
mesh = ExtResource("2_7cmg1")

[node name="Bridge" parent="." instance=ExtResource("11_shiy2")]
transform = Transform3D(8.93559, 0, -4.48945, 0, 10, 0, 4.48945, 0, 8.93559, 571.069, -2.95471, 72.32)

[node name="Campfire" parent="." instance=ExtResource("12_iitm7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 572.469, 1.73401, 72.7232)

[connection signal="timeout" from="MenuFadeTimer" to="." method="_on_menu_fade_timer_timeout"]
[connection signal="toggle_pause" from="PauseMenu" to="." method="_on_pause_menu_toggle_pause"]
